Fix des alignements

--- a/css/style.css
+++ b/css/style.css
@@ -349,7 +349,13 @@ button {
 }
 
 .text-bg {
-     text-align: center;
+     display: flex;
+     justify-content: center;
+}
+
+.text-center {
+     margin-top: 25px;
+     margin-bottom: 25px;
 }
 
 .black {
